# meadow

./: AGENTS.md  CURRENT_PLAN.md  README.md  meadoc.example.toml  meadoc.toml  pyproject.toml
docs/: ARCHITECTURE.md  DESIGN_DECISIONS.md  EXCEPTION_STRATEGY.md  REFACTORING_NOTES.md  TODO.md
docs/ide_rendering_tests/: indented-multiline-backticks.py
rendering-tests/: indented-multiline-backticks.py
scripts/: scrape_stdlib_links.py
src/meadoc/: __init__.py  _version.py  config.py  main.py  markdown.py  parser.py  stdlib_links.py
src/meadow/: __init__.py  _version.py  config.py  discovery.py  errors.py  generator.py  main.py  markdown.py  parser.py  validator.py
stubs/: tomlkit.pyi
tests/: __init__.py  test_config.py  test_discovery.py  test_errors.py  test_ignore.py  test_parser.py
