[project]
name = "meadow"
version = "2026.2.15"
description = "a docstring machine based on typing information for the meadow Docstring Format"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tomlkit>=0.13.0,<0.14.0",
    "libsightseeing>=0.2.0",
]

[project.scripts]
meadoc = "meadow.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meadow"]
force-include = { "README.md" = "meadow/README.md" }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "basedpyright>=1.0.0",
    "ruff>=0.6.0",
    "mypy>=1.0.0",
    "raiseattention>=2026.2.141",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.basedpyright]
include = ["src"]
exclude = [
    "**/__pycache__",
    ".venv",
    "venv",
]
pythonVersion = "3.13"
pythonPlatform = "All"
stubPath = "stubs"

# strict mode overrides
strictList = ["src"]
reportUnnecessaryComparison = false
reportUnknownVariableType = false
reportArgumentType = false

[tool.ruff]
target-version = "py313"
line-length = 79
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D107",  # Missing docstring in __init__
    "D203",  # 1 blank line required before class docstring
    "D205",  # 1 blank line required between summary line and description
    "D213",  # Multi-line docstring summary should start at the second line
    "D403",  # First word of docstring should be capitalized (lowercase style)
    "D405",  # Section name should be properly capitalized (lowercase style)
    "D415",  # First line should end with a period
    "D417",  # Missing argument descriptions in docstring
    "E501",  # Line too long
    "SIM102",  # Use single if instead of nested if
]

[tool.ruff.lint.pydocstyle]
convention = "google"
