[project]
name = "meadow"
version = "2026.2.16"
description = "a docstring machine based on typing information for the meadow Docstring Format"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "libsightseeing>=0.2.0",
    "tomlkit>=0.14.0",
]

[project.scripts]
meadoc = "meadow.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meadow"]
force-include = { "README.md" = "meadow/README.md" }

[dependency-groups]
dev = [
    "basedpyright>=1.38.0",
    "beautifulsoup4>=4.14.3",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "raiseattention>=2026.2.141",
    "requests>=2.32.5",
    "ruff>=0.15.1",
    "types-requests>=2.32.4.20260107",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.basedpyright]
include = ["src", "stubs", "scripts"]
exclude = [
    "**/__pycache__",
    ".venv",
    "docs/ide_rendering_tests",
]
pythonVersion = "3.13"
pythonPlatform = "All"
stubPath = "stubs"
strict = ["src"]
reportUnnecessaryComparison = false
reportUnknownVariableType = false
reportArgumentType = false

[tool.ruff]
include = ["src/**/*.py", "stubs/**/*.py", "scripts/**/*.py"]
exclude = [
    "**/__pycache__",
    ".venv",
    "docs/ide_rendering_tests",
]
target-version = "py313"
line-length = 100
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    # ruff v. mdf wrangling
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D107",  # Missing docstring in __init__
    "D203",  # 1 blank line required before class docstring
    "D205",  # 1 blank line required between summary line and description
    "D213",  # Multi-line docstring summary should start at the second line
    "D401",  # First line of docstring should be in imperative mood
    "D400",  # First line should end with a period
    "D403",  # First word of docstring should be capitalized (lowercase style)
    "D404",  # First word of the docstring should not be "This"
    "D405",  # Section name should be properly capitalized (lowercase style)
    "D413",  # Missing blank line after last section ("arguments")
    "D415",  # First line should end with a period
    "D417",  # Missing argument descriptions in docstring
    
    # do NOT re-enable these
    # "E501",  # Line too long
    # "SIM102",  # Use single if instead of nested if
]

[tool.mypy]
files = ["src", "stubs", "scripts"]
exclude = [
    "__pycache__",
    ".venv",
    "docs/ide_rendering_tests",
]

[tool.raiseattention]
include = ["src/**/*.py", "stubs/**/*.py", "scripts/**/*.py"]
exclude = [
    "**/__pycache__",
    ".venv",
    "docs/ide_rendering_tests",
]

[tool.meadoc]
include = ["src/**/*.py", "stubs/**/*.py", "scripts/**/*.py"]
exclude = [
    "**/__pycache__",
    ".venv",
    "docs/ide_rendering_tests",
]
